--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -76,6 +76,15 @@
 				<app-control-messages [control]="f['salary']"></app-control-messages>
 			</div>
 		</div>
+		<div class="col-lg-2 col-md-4" style="top:11px;align-self: center;" >
+			<div class=" form-group">
+				<div class="custom-control custom-checkbox mb-2">
+				<input type="checkbox" class="custom-control-input" formControlName="negotiable" id="customCheckRemote001">
+				<label class="custom-control-label font-weight-bold" for="customCheckRemote001"> 
+				<a > {{"shared.negotiable" | translate}}</a></label>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="row mt-2">
 		<div class="col-lg-4 col-md-6 matches-8">
