--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -53,6 +53,7 @@
           <app-post-job-footer
           (postJob)="postJob()"
           [postJobForm]="postJobForm"
+          [isEdit]="isEdit"
           [currentTabInfo]="currentTabInfo"
           (onTabChangeEvent)="onFooterTabChange($event)"
           (onEnableJobPreviewModal)="onToggleJobPreviewModal($event)">
