--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -1,5 +1,5 @@
 <section class="my-5">
-	<div class="container">
+	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
 		<div class="row mb-5">
 			<div class="col-lg-8 col-md-8 matches-8">
 				<div class="row">
