--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -493,8 +493,13 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
-								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- </span>
+								<li class="list-group-item text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
+								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- 
+									<a class="handsExp-color"> {{item?.title}} </a> 
+									</span> 
+									<span *ngIf="!missingElement" >  
+									<a class="handsExp-color"> {{item?.title}} </a> 
+									</span>
 								</li>
 							 </ul>
 						</div>
@@ -505,8 +510,8 @@
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
 								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
-								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
-								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} </span>
+								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
+								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								</li>
 							 </ul>
 						</div>
@@ -993,8 +998,13 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
-								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- </span>
+								<li class="list-group-item text-capitalize "  [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
+								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- 
+									<a class="handsExp-color"> {{item?.title}} </a> 
+									</span> 
+									<span *ngIf="!missingElement" >  
+									<a class="handsExp-color"> {{item?.title}} </a> 
+									</span>
 								</li>
 							 </ul>
 						</div>
@@ -1005,8 +1015,8 @@
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
 								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
-								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
-								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} </span>
+								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
+								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								
 								</li>
 							 </ul>
@@ -1493,8 +1503,13 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
-								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- </span>
+								<li class="list-group-item text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
+								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- 
+									<a class="handsExp-color"> {{item?.title}} </a> 
+									</span> 
+									<span *ngIf="!missingElement" >  
+									<a class="handsExp-color"> {{item?.title}} </a> 
+									</span>
 								</li>
 							 </ul>
 						</div>
@@ -1505,8 +1520,8 @@
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
 								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
-								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
-								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} </span>
+								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
+								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								
 								</li>
 							 </ul>
@@ -1995,8 +2010,13 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
-								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- </span>
+								<li class="list-group-item text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
+								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- 
+									<a class="handsExp-color"> {{item?.title}} </a> 
+									</span> 
+									<span *ngIf="!missingElement" >  
+									<a class="handsExp-color"> {{item?.title}} </a> 
+									</span>
 								</li>
 							 </ul>
 						</div>
@@ -2007,8 +2027,8 @@
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
 								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
-								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
-								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} </span>
+								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
+								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								
 								</li>
 							 </ul>
