--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -58,7 +58,7 @@
         </ul>
       </div>
       </div>
-    <div class="container" *ngIf="router?.url?.includes('/auth') ">
+    <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" *ngIf="router?.url?.includes('/auth') ">
       <a [routerLink]="['/']" href="javascript:;" class="navbar-brand">
         <img src="assets/images/logo.png" /></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -129,7 +129,7 @@
   </nav>
 
   <nav class="navbar navbar-expand-lg navbar-light theme-nav" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role && loggedUserInfo?.role?.includes(1)">
-    <div class="container">
+    <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
       <a  [routerLink]="['/employer/dashboard']" href="javascript:;" class="navbar-brand" ><img src="assets/images/logo.png"/></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -201,7 +201,7 @@
   </nav>
 
   <nav class="navbar navbar-expand-lg navbar-light theme-nav" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role && loggedUserInfo?.role?.includes(0)">
-    <div class="container">
+    <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'">
       <a [routerLink]="['/user/dashboard']" href="javascript:;" class="navbar-brand"><img src="assets/images/logo.png"
           width="100" /></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
