--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
@@ -1,6 +1,6 @@
 <!-- Sub Header Section -->
 <section class="sub-header">
-  <div class="container">
+  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'"  >
     <div class="row">
       <div class="col-lg-5 d-flex align-items-center">
 		<!-- <button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
@@ -18,7 +18,7 @@
 </section>
   <!-- //Sub Header Section -->
 <section class="my-5">
-  <div class="container">
+  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'"  >
     <div class="row">
       <div class="col-lg-8 col-md-8 matches-8" *ngIf="DetailsShown">
         <div class="row">
