--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -1,5 +1,5 @@
 <section class="sub-header">
-  <div class="container">
+  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
     <div class="row">
       <div class="col-lg-5 col-md-5 col-sm-5 d-flex align-items-center">
        <!--  <button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
@@ -20,7 +20,7 @@
 </section>
   <!-- //Sub Header Section -->
 <section class="my-5">
-  <div class="container">
+  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
     <div class="row">
       <div class="col-lg-8 col-md-8 matches-8">
         <!-- <div class="row"> -->
@@ -62,15 +62,19 @@
 				<div class="col-lg-5 col-md-5 col-sm-5" >
 							<ng-container *ngIf="postedJobsDetails?.salary_type == 0">
 								<h6 class="text-capitalize job-cardh6" >{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + '/ hr'}}</h6>
+								<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 11rem;" *ngIf="postedJobsDetails?.negotiable ==true">{{"shared.negotiable" | translate}}</a>
 							</ng-container>
 							<ng-container *ngIf="postedJobsDetails?.salary_type ==1">
 								<h6 class="text-capitalize job-cardh6" >{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Annual'}}</h6>
+								<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 11rem;" *ngIf="postedJobsDetails?.negotiable ==true"> {{"shared.negotiable" | translate}}</a>
 							</ng-container>
 							<ng-container *ngIf="postedJobsDetails?.salary_type ==2">
 								<h6 class="text-capitalize job-cardh6" >{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Monthly'}}</h6>
+								<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 11rem;" *ngIf="postedJobsDetails?.negotiable ==true"> {{"shared.negotiable" | translate}}</a>
 							</ng-container>
 							<ng-container  *ngIf="postedJobsDetails?.salary_type < 0">
 								--
+								<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 11rem;" *ngIf="postedJobsDetails?.negotiable ==true">{{"shared.negotiable" | translate}}</a>
 							</ng-container>
 							<h6 class="text-capitalize job-cardh6" >{{"userProfile.remote" | translate }} : {{utilsHelperService.onGetYesOrNoValue(postedJobsDetails?.remote)}}</h6>
 							<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate }} : {{utilsHelperService.onGetYesOrNoValue(postedJobsDetails?.willing_to_relocate)}}</h6> -->
