--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -1,5 +1,5 @@
 <section class="my-4" style="min-height: 300px;">
-  <div class="container container-big">
+  <div  [ngClass]="(screenWidth >= 1500)?'container-fluid':'container  container-big'" >
     <div class="row mb-4">
       <div class="col-lg-12 text-right">
         <button type="button" [ngClass]="{'active': isStatusValue == 1}" class="btn btn-sm btn-outline-success px-3 mr-1" (click)="onGetChangedStatus(1)">
