--- a/frontend/src/app/modules/features/employer/saved-profile/saved-profile.component.html
+++ b/frontend/src/app/modules/features/employer/saved-profile/saved-profile.component.html
@@ -1,5 +1,5 @@
 <section class="my-4">
-  <div class="container">
+  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'">
     <div class="row mb-4">
       <div class="col-lg-12">
         <form class="form-inline">
