--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -1,5 +1,5 @@
 <section class="my-5">
-	<div class="container">
+	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'">
 		<div class="row mb-5">
 			<div class="col-lg-12">
 				<div class="table-responsive">
