--- a/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
@@ -1,6 +1,6 @@
  <!-- Sub Header Section -->
  <section class="sub-header">
-  <div class="container">
+  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
     <div class="row">
       <div class="col-lg-5 d-flex align-items-center">
 		<!-- <button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
@@ -21,7 +21,7 @@
   <!-- //Sub Header Section -->
 
 <section class="my-5">
-	<div class="container">
+	<div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
 		<div class="row">
 			<div class="col-lg-8 col-md-8 matches-8">
 				<div class="row">
@@ -58,6 +58,7 @@
 									<div class="col-lg-6" style="text-align: right;">
 										<ng-container *ngIf="postedJobsDetails?.salary_type == 0">
 											<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / hr'}}</h6>
+											
 										</ng-container>
 										<ng-container *ngIf="postedJobsDetails?.salary_type ==1">
 											<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Annual '}}</h6>
@@ -68,6 +69,7 @@
 										<ng-container  *ngIf="postedJobsDetails?.salary_type < 0">
 											--
 										</ng-container>
+										<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 11rem;" *ngIf="postedJobsDetails?.negotiable ==true"> {{"shared.negotiable" | translate}}</a>
 										<h6 class="text-capitalize job-cardh6">{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.remote)}} </h6>
 										<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.willing_to_relocate)}} </h6> -->
 									</div>
