--- a/frontend/src/app/modules/features/user/modal/resume-select/resume-select.component.html
+++ b/frontend/src/app/modules/features/user/modal/resume-select/resume-select.component.html
@@ -1,7 +1,7 @@
 <ng-template #resumeSelectModal let-modal>
   <!-- <form [formGroup]="resumeSelectForm" (ngSubmit)="onApplyJob()"> -->
     <div class="modal-header">
-      <h5 class="modal-title">Resume</h5>
+      <h5 class="modal-title">{{"shared.apply" | translate}}</h5>
       <button (click)="onClickCloseBtns(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
