--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
@@ -1,6 +1,6 @@
 <!-- Sub Header Section -->
 <section class="sub-header">
-  <div class="container">
+  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
     <div class="row">
       <div class="col-lg-5">
         <ol class="breadcrumb">
@@ -13,7 +13,7 @@
 </section>
 <!-- //Sub Header Section -->
 <section class="my-4">
-  <div class="container">
+  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
     <div class="row">
       <div class="col-lg-12 tabs-animated" id="myTab">
         <form method="post" #candidateNgForm="ngForm" [formGroup]="candidateForm">
