--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -24,7 +24,7 @@
 		</div>
 		</div>
 		<div class="col-lg-5 col-md-6">
-			<input formControlName="others_data" maxlength="100" class="form-control mt-4 " type="text" placeholder="Ex. Should work in CET Zone">
+			<input formControlName="others_data" class="form-control mt-4 " type="text" placeholder="Ex. Should work in CET Zone">
 		</div>
 		<div class="col-lg-5 col-md-6" style="top: 25px;">
 			<button (click)="onDuplicateOthers()" type="button" class="btn btn-outline-green ml-2"
